# rrg12

./: LICENSE  README.md  setup.cfg  src
src/: custom.py  enums.py  modbus.py
src/rrg12/: custom.py  modbus.py
