[metadata]
name = rrg12
version = 1.0.0
author = dydyamotya
author_email = matderevenayv@yandex.ru
description = Package to communicate with RRG flow regulators by eltochpribor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dydyamotya/rrg12
project_urls =
    Bug Tracker = https://github.com/dydyamotya/rrg12/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
